# ai-video-cutter

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  cli.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
config/: default.yaml
docs/: api.md  config.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  editor.ts  export.ts  projects.ts  status.ts  storyboard.ts  videos.ts
frontend/src/hooks/: useDevMode.ts  usePolling.ts
frontend/src/stores/: editorStore.ts  projectStore.ts  storyboardStore.ts  videoStore.ts
frontend/src/types/: project.ts  segment.ts  status.ts  storyboard.ts  timeline.ts  versions.ts  video.ts
frontend/src/utils/: formatting.ts  processing.ts  videoUrl.ts
notebooks/: analysis_explorer.ipynb  pipeline_helper.ipynb  prompts.py  scene_analysis.ipynb  test_understanding.ipynb  trajectory_explorer.ipynb
scripts/: camera_trajectory.py  scene_selection.py
src/api/: deps.py  main.py
src/api/routers/: editor.py  export.py  projects.py  status.py  storyboard.py  videos.py
src/api/schemas/: requests.py  responses.py
src/core/: config.py  logging_config.py  project.py  prompts.py  storage.py  storage_factory.py  storage_local.py  tracing.py
src/core/schemas/: __init__.py  (+6 more)
src/editor/: graph.py  nodes.py  state.py
src/storyboard/: graph.py  llm.py  nodes.py  state.py
src/video/: analysis.py  clip.py  downsample.py  frames.py  homography.py  ingest.py  metrics.py  optical_flow.py  pipeline.py  segmentation.py  vlm.py  vlm_backend.py
src/worker/: agent_tasks.py  celery_app.py  video_tasks.py  vlm_tasks.py
tests/: conftest.py  test_config.py  test_homography.py  test_optical_flow.py  test_segmentation.py  test_segments.py  test_storage.py
tests/editor/: test_embedding.py  test_nodes.py  test_pathfinding.py
tests/storyboard/: test_nodes.py
tests/video/: test_downsample.py  test_frames.py  test_ingest.py  test_pipeline.py  test_storage.py
tests/worker/: test_agent_tasks.py  test_video_tasks.py
(+39 files in other folders)
