[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-video-cutter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "opencv-contrib-python==4.13.0.92",
    "numpy==2.4.3",
    "torch==2.10.0",
    "transformers==5.3.0",
    "ruptures==1.1.10",
    "scipy==1.17.1",
    "pillow==12.1.1",
    "tqdm==4.67.3",
    "ffmpeg-python==0.2.0",
    "scikit-learn==1.8.0",
    "sentencepiece==0.2.1",
    "protobuf==7.34.0",
    "matplotlib==3.10.8",
    "pandas==3.0.1",
    "typer>=0.12",
    "pydantic>=2.0",
    "google-genai>=1.0",
]

[project.scripts]
vc = "cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
