[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-video-cutter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "opencv-contrib-python==4.13.0.92",
    "numpy==2.4.3",
    "torch==2.10.0",
    "transformers==5.3.0",
    "ruptures==1.1.10",
    "scipy==1.17.1",
    "pillow==12.1.1",
    "tqdm==4.67.3",
    "ffmpeg-python==0.2.0",
    "scikit-learn==1.8.0",
    "sentencepiece==0.2.1",
    "protobuf==7.34.0",
    "matplotlib==3.10.8",
    "pandas==3.0.1",
    "typer>=0.12",
    "pydantic>=2.0",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-mistralai>=0.2",
    "networkx>=3.0",
    "opentimelineio>=0.16",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
]
worker = [
    "celery[redis]>=5.3",
    "flower>=2.0",
    "redis>=5.0",
    "langgraph-checkpoint-redis>=0.0.1",
]
all = ["ai-video-cutter[api,worker]"]

[project.scripts]
vc = "cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
